Fix content layout shift

--- a/src/app/_components/RailNav/RailNav.module.css
+++ b/src/app/_components/RailNav/RailNav.module.css
@@ -1,4 +1,8 @@
 .railNavContainer {
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
   display: flex;
 
   .railNav {
