--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,5 +1,6 @@
 .section1 {
   display: flex;
+  width: 100%;
 }
 
 .column1 {
@@ -9,4 +10,10 @@
   overflow-x: hidden;
   scrollbar-width: none; 
   -ms-overflow-style: none; 
+}
+
+.column2 {
+  width: calc(20% + 35px);
+  max-width: calc(195px + 35px);
+  height: 100dvh;
 }
